# on-chain-indexer

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.factory/droids/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  thoughts-analyzer.md  thoughts-locator.md  web-search-researcher.md
benchmarks/: README.md  TinyToken.abi  bench_api_list.js  bench_api_watch.js  bench_throughput.py
contracts/: Eventful.sol  TinyToken.sol
hack/migrations/: 001_add_finality_tables.sql
src/deft_indexer/: __init__.py  celery_app.py  config.py  db.py  logging.py  models.py  publisher.py  schemas.py  tasks.py  web3_provider.py
src/deft_indexer/api/: main.py
src/deft_indexer/services/: abi.py  api_rate_limiter.py  chunk_controller.py  enqueue_dedup.py  rate_limiter.py
tests/: README.md  test_abi_resolution.py  test_api.py  test_api_endpoints.py  test_api_errors.py  test_models.py  test_rate_limiter.py  test_tasks.py
thoughts/: CLAUDE.md  adrifadilah  global  shared
